2008-07-18  Ivan Frade  <ivan.frade@nokia.com>
	
	* src/libtracker-db/tracker-db-manager.c:
	Commented out the code to load xesam categories in
	tracker_ontology. It overwrittes the real categories because the
	IDs are not unique.
	
	* src/tracker-indexer/tracker-indexer.c
	Obtain the mimetype and service type from the file, instead from
	the module name.
	
2008-07-18  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/tracker-indexer/tracker-indexer.c:
	* src/tracker-indexer/tracker-indexer.h:
	* data/dbus/tracker-indexer.xml:

	Added a SetPaused DBus API to the indexer

2008-07-17  Ivan Frade  <ivan.frade@nokia.com>
	
	* src/libtracker-common/tracker-ontology.[ch]:
	(tracker_ontology_registered_service_types)
	(tracker_ontology_registered_field_types): new functions to obtain
	services and field type names registered in the ontology.
	
	* src/trackerd/tracker-metadata.c: 
	(tracker_metadata_get_registered_types)
	(tracker_metadata_get_registered_classes): Use the new functions
	instead accessing to the DB.
	
	* tests/libtracker-common/tracker-ontology-test.c: Tests for the
	new methods.
	
2008-07-17  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-crawler.c:
	* src/trackerd/tracker-processor.c:
	* src/trackerd/tracker-main.c: Initialize module config before
	initializing the monitor module. The monitor module uses the
	module config to set up queues and hash tables.
	
	* src/trackerd/tracker-monitor.[ch]: Make all API calls require a
	module name. This is because now we have separate queues for each
	module and 3 queues for each type of event (created, updated,
	deleted). This means we now don't just send "Files" as the service
	type when telling the indexer about monitor events.

2008-07-17  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/trackerd/tracker-search.c:
	* data/dbus/tracker-search.xml:

	Async search API.

2008-07-17  Ivan Frade  <ivan.frade@nokia.com>
	
	* data/dbus/tracker-files.xml
	* src/trackerd/tracker-files.[ch]:

	Async files API.
