@@ -1,3 +1,8 @@
+2008-07-18  Philip Van Hoof  <pvanhoof@gnome.org>
+
+	* src/trackerd/tracker-search.c: Fixed assertions that are not
+	necessary (and even wrong).
+
 2008-07-18  Ivan Frade  <ivan.frade@nokia.com>
 	
 	* src/libtracker-db/tracker-db-manager.c:
